# git-subrepo

./: .gitignore  .rc  README.md  TESTING.md  new-2  pyproject.toml  requirements-test.txt  wrapper.sh
.github/workflows/: test.yml
doc/: README.md
lib/: git-subrepo  git-subrepo.py
share/: completion.bash
test/: branch-rev-list.t  compile.t  conftest.py  encode.t  error.t  issue29.t  pull-merge.t  pull-ours.t  pull.t  push-after-init.t  push-force.t  push-new-branch.t  push-no-changes.t  push-squash.t  push.t  setup  status.t  test_branch.py  test_branch_all.py  test_branch_rev_list.py  test_branch_rev_list_one_path.py  test_clean.py  test_clone.py  test_clone_annotated_tag.py  test_compile.py  test_config.py  test_encode.py  test_error.py  test_fetch.py  test_gitignore.py  test_init.py  test_issue29.py  test_issue95.py  test_issue96.py  test_pull.py  test_pull_all.py  test_pull_merge.py  test_pull_message.py  test_pull_new_branch.py  test_pull_ours.py  (+15 more)
tests/: README.md  conftest.py  test_branch_all.py  test_branch_rev_list_one_path.py  test_compile.py  test_encode.py  test_init.py  test_pull.py  test_pull_all.py  test_pull_merge.py  test_pull_message.py  test_pull_ours.py  test_pull_theirs.py  test_pull_twice.py  test_push.py  test_push_after_push_no_changes.py  test_push_new_branch.py  test_push_no_changes.py  test_push_squash.py  test_status.py
