[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-subrepo"
version = "0.4.9"
description = "Git Submodule Alternative"
readme = "ReadMe.pod"
requires-python = ">=3.7"
authors = [
    {name = "Thorsten Klein", email = "thorsten.klein.git@gmail.com"}
]
keywords = ["git", "subrepo", "submodule"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
]

[tool.pytest.ini_options]
# You can override any pytest option via pytest argument `-o key=value`.
# E.g. unset option `-o pythonpath=` to use the installed west in tests
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
pythonpath = "src"

[tool.setuptools]
py-modules = []
