[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-subrepo"
version = "0.4.9"
description = "Git Submodule Alternative"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Thorsten Klein", email = "thorsten.klein.git@gmail.com"}
]
keywords = ["git", "subrepo", "submodule"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
git-subrepo = "git_subrepo:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.6.1",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools]
packages = []
py-modules = []

[tool.setuptools.package-data]
"*" = ["*.sh", "*.bash"]
